[tool.poetry]
name = "django-models-redis-cache"
version = "1.5.1"
description = "Django Models Redis Cache (DMoReCa), library that gives your specified Django models regular caching via Redis"
authors = ["Anton Nechaev <antonnechaev990@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gh0st-work/django_models_redis_cache"
homepage = "https://github.com/gh0st-work/django_models_redis_cache"
keywords = ["python", "redis", "ORM", "django", "database"]
license = "MIT"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5.3"
Django = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
